# widgets-meter-gauge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/meter/: CMakeLists.txt  main.cpp
include/Widgets/: Meter
src/: CMakeLists.txt  meter.cpp  meter.hpp
